# genai

./: README.md  agentic_rag_demo.ipynb  package_installation_guide.md  pyproject.toml  requirements.txt
.gradio/flagged/: dataset1.csv
AgenticRag/: README.md  app.py  tutorial.md
gradio/: gradio_exercise.ipynb
