[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "genai"
version = "0.1.0"
description = "GenAI experiments and projects"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "jupyter>=1.0.0",
    "jupyterlab>=4.0.0",
    "ipywidgets>=8.0.0",
]

[project.optional-dependencies]
huggingface = [
    "transformers>=4.0.0",
    "datasets>=2.0.0",
    "accelerate>=0.20.0",
]
pytorch = [
    "torch>=2.0.0",
    "torchvision>=0.15.0", 
    "torchaudio>=2.0.0",
]
datascience = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "scikit-learn>=1.0.0",
]
dev = [
    "black",
    "flake8", 
    "pytest",
]

[tool.black]
line-length = 88
target-version = ['py39'] 